; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cartridge.c_CARTRIDGE_SetTypeAutoReboot.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cartridge.c_CARTRIDGE_SetTypeAutoReboot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CARTRIDGE_piggyback = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CARTRIDGE_SetTypeAutoReboot(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @CARTRIDGE_SetType(i32* %5, i32 %6)
  %8 = load i32*, i32** %3, align 8
  %9 = icmp ne i32* %8, @CARTRIDGE_piggyback
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = call i32 (...) @AutoReboot()
  br label %12

12:                                               ; preds = %10, %2
  ret void
}

declare dso_local i32 @CARTRIDGE_SetType(i32*, i32) #1

declare dso_local i32 @AutoReboot(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
